произошли корректировки в hw2

--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
 	
 	<p>Теперь хотелось бы со всеми попрощаться и пожелать удачи!</p>
 	<p><small>няяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяя</small>!<p>
-
+	<p><mark> Нужно изучать больше тегов!</mark><p>
+	<p>Минутка юмора!</p>
+	<p>Нажмите на конпку.</p>
+	<audio controls>
+		<source src="bumer3.ogg" type="audio.ogg">
+		<source src="bumer3.mp3" type="audio/mpeg">
+	</audio>
 
 	</body>
 </html>
