--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 		<h2>Здесь и сейчас мы впервые будем работать с html.</h2>
 		<h3>Рассмотрим поставленные задачи!</h3>
 
-		<article>
 			<h1>Список задач:</h1>
-				<section>Использовать смысловые теги article и section</section>
-				<section>Использовать гиперссылку</section>
-				<section>Создать список</section>
-				<section>Добавить картинку</section>
-				<section>Создать таблицу</section>
-				<section>Использовать неизученный тег</section>
-		<article>
+			<ol>
+				<li>Использовать смысловые теги article и section</li>
+				<li>Использовать гиперссылку</li>
+				<li>Создать список</li>
+				<li>Добавить картинку</li>
+				<li>Создать таблицу</li>
+				<li>Использовать неизученный тег</li>
+			</ol>
 	<p>Начать хотелось бы с простого, так что вот ссылка на <a href="https://tatarpirog.ru/recipe-echpochmak.html"> рецепт эчпочмаков</a></p>
 		
 	<p>А тут поделюсь списком дел на выходные</p>
@@ -52,5 +52,14 @@
 		<source src="bumer3.mp3" type="audio/mpeg">
 	</audio>
 
+	<label for="Тортик">Выбери тортик:</label>
+
+	<select id="тортики">
+  		<option value="Медовик">Медовик</option>
+  		<option value="Наполеон">Наполеон</option>
+  		<option value="Морковный торт">Морковный торт</option>
+  		<option value="Чизкейк">Чизкейк</option>
+	</select>
+	
 	</body>
 </html>
