финальная версия(наверное)

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 	<body>
 		<h1>Приветствую, раз уж вы здесь оказались!</h1>
 		<h2>Здесь и сейчас мы впервые будем работать с html.</h2>
-		<h3>Рассмотрим поставленные задачи!</h3>
+		<article>
+			<h3>Рассмотрим поставленные задачи!</h3>
 
-			<h1>Список задач:</h1>
+			<h4>Список задач:</h4>
 			<ol>
 				<li>Использовать смысловые теги article и section</li>
 				<li>Использовать гиперссылку</li>
@@ -18,30 +19,36 @@
 				<li>Создать таблицу</li>
 				<li>Использовать неизученный тег</li>
 			</ol>
-	<p>Начать хотелось бы с простого, так что вот ссылка на <a href="https://tatarpirog.ru/recipe-echpochmak.html"> рецепт эчпочмаков</a></p>
-		
-	<p>А тут поделюсь списком дел на выходные</p>
-	<ol>
- 		<li>Попить еды</li>
- 		<li>Поесть воды</li>
- 		<li>Не умереть!</li>
-	</ol>	
-	<p>Ах, да! Совсем забыл прикрепить фотку эчпочмака!</p>
-	<img src="ech.jpg">
-	
-	<p>Кто-то решил поиграть в крестики нолики на моей странице...</p>
-	<table>
-		<tr>
-			<td>О</td><td>Х</td><td>О</td>
- 		</tr>
-  		<tr>
-    			<td>O</td><td>Х</td><td>Х</td>
- 		</tr>
-  		<tr>
-    			<td>Х</td><td>О</td><td>О</td>
-  		</tr>
-	</table>
-	
+	<section>
+		<p>Начать хотелось бы с простого, так что вот ссылка на <a href="https://tatarpirog.ru/recipe-echpochmak.html"> рецепт эчпочмаков</a></p>
+	</section>
+	<section>	
+		<p>А тут поделюсь списком дел на выходные</p>
+		<ol>
+ 			<li>Попить еды</li>
+ 			<li>Поесть воды</li>
+ 			<li>Не умереть!</li>
+		</ol>
+	</section>
+	<section>	
+		<p>Ах, да! Совсем забыл прикрепить фотку эчпочмака!</p>
+		<img src="ech.jpg">
+	</section>
+	<section>	
+		<p>Кто-то решил поиграть в крестики нолики на моей странице...</p>
+		<table>
+			<tr>
+				<td>О</td><td>Х</td><td>О</td>	
+ 			</tr>
+ 	 		<tr>
+ 	   			<td>O</td><td>Х</td><td>Х</td>
+ 			</tr>
+ 	 		<tr>
+ 	   			<td>Х</td><td>О</td><td>О</td>
+  			</tr>
+		</table>
+	</section>
+	<section>	
 	<p>Теперь хотелось бы со всеми попрощаться и пожелать удачи!</p>
 	<p><small>няяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяяя</small>!<p>
 	<p><mark> Нужно изучать больше тегов!</mark><p>
@@ -60,6 +67,10 @@
   		<option value="Морковный торт">Морковный торт</option>
   		<option value="Чизкейк">Чизкейк</option>
 	</select>
-	
+	<p>Когда-нибудь <abbr title="я смогу это сдать">ясэс</abbr>. (я правда смогу это сдать!)</p>	
+
+	</section>
+	</article>
+
 	</body>
 </html>
