--- a/hw3.html
+++ b/hw3.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<tittle>CSS PRACTICE</tittle>
+		<title>CSS PRACTICE</title>
 	<link href="style.css" rel="stylesheet" type="text/css"/>
 	<style type="text/css">
-		tittle { 
+		title{ 
 		font-size: 200%; 
 		font-family: Arial; 
 		}
