--- a/hw3.html
+++ b/hw3.html
@@ -4,7 +4,7 @@
 		<title>CSS PRACTICE</title>
 	<link href="style.css" rel="stylesheet" type="text/css"/>
 	<style type="text/css">
-		title{ 
+		.hi{ 
 		font-size: 200%; 
 		font-family: Arial; 
 		}
@@ -13,6 +13,7 @@
 	</head>
 
 	<body>
+		<div id="hi">Поработаем с css!</div>
 		<h1 id="Privetstvie">Приветствую, раз уж вы здесь оказались!</h1>
 		<h2>Здесь и сейчас мы впервые будем работать с html.</h2>
 		<h3>Рассмотрим поставленные задачи!</h3>
