--- a/homework5.html
+++ b/homework5.html
@@ -6,6 +6,6 @@
 	
 	<body>
 		<b>Выполнение пятого дз<b>
-		<script src="hw5.js"></script>
+		<script src="homework5.js"></script>
 	</body>
 </html>
